--- a/templates/predict.html
+++ b/templates/predict.html
@@ -538,8 +538,8 @@
         function initCanvas() {
             ctx.fillStyle = 'white';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.strokeStyle = '#800020';
-            ctx.lineWidth = 4;
+            ctx.strokeStyle = 'black';
+            ctx.lineWidth = 11;
             ctx.lineCap = 'round';
             ctx.lineJoin = 'round';
         }
