chore: add our names

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,30 @@
         </ol>
     </main>
 
+    <section class="team-section">
+        <div class="team-container">
+            <h3>Equipo de Desarrollo</h3>
+            <div class="team-members">
+                <div class="member">
+                    <h4>Sergio Sebastian Pezo Jimenez</h4>
+                    <p>20224087G</p>
+                </div>
+                <div class="member">
+                    <h4>Andre Joaquin Pacheco Taboada</h4>
+                    <p>Estudiante</p>
+                </div>
+                <div class="member">
+                    <h4>Arbues Enrique Perez Villegas</h4>
+                    <p>20220419E</p>
+                </div>
+                <div class="member">
+                    <h4>Christian Mesajil</h4>
+                    <p>Estudiante</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2025 Proyecto de Reconocimiento de Símbolos | Universidad Nacional de Ingeniería</p>
     </footer>
